# vision-Transformer-paper

./: .gitignore  README.md  pyproject.toml  requirements.txt
helping_functions/: __init__.py  data_setup.py  engine.py  utils.py
notebooks/: exploration.ipynb
scripts/: __init__.py  train.py
src/: __init__.py  utils.py
src/data/: __init__.py  dataset.py
src/models/: __init__.py  patch_embedding.py  transformer_block.py  vit.py
